--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     width: 100%;
 }
 
-/* Активная кнопка (на текущей странице) */
+/* Активная кнопка */
 .nav-links a.active {
     color: black;
 }
