--- a/style.css
+++ b/style.css
@@ -38,13 +38,14 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: gray; /* Серый цвет для невыбранных кнопок */
+    color: gray; /* Серый цвет по умолчанию */
     font-size: 20px;
     font-weight: 600;
     padding: 10px;
     position: relative;
 }
 
+/* Полоска под активной кнопкой */
 .nav-links a::after {
     content: "";
     position: absolute;
@@ -56,7 +57,7 @@ body {
     transition: width 0.3s ease-in-out;
 }
 
-/* При наведении меняем цвет текста и добавляем полоску */
+/* При наведении */
 .nav-links a:hover {
     color: black;
 }
