--- a/style.css
+++ b/style.css
@@ -85,10 +85,11 @@ body {
     padding: 15px;
     border-radius: 10px;
     text-align: center;
-    width: 200px;
+    width: 250px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.project img {
+.image-wrapper img {
     width: 100%;
     border-radius: 10px;
 }
@@ -98,6 +99,22 @@ body {
     color: white;
     padding: 5px;
     border-radius: 5px;
+    font-weight: bold;
+}
+
+.play-btn {
+    background-color: #d8b4fe; /* Пастельный фиолетовый */
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
+
+.play-btn:hover {
+    background-color: #c084fc;
 }
 
 .empty {
