--- a/style.css
+++ b/style.css
@@ -234,3 +234,21 @@ body {
     display: none;
   }
 }
+/* Кастомный скроллбар */
+::-webkit-scrollbar {
+  width: 8px;  /* ширина вертикального скроллбара */
+  height: 8px; /* высота горизонтального скроллбара, если нужно */
+}
+
+::-webkit-scrollbar-track {
+  background: white;  /* цвет дорожки скроллбара */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);  /* цвет ползунка, можно настроить прозрачность */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
